# bento-linker

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  TODO  old  pytest.ini  setup.py
bento/: README.md  __main__.py  argstuff.py  box.py  clip  link.py.no  util.py
bento.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
bento/glue/: __init__.py  abort_glue.py  error_glue.py  heap_glue.py  write_glue.py
bento/loaders/: __init__.py  bd.py  fs.py  glz.py  noop.py
bento/outputs/: __init__.py  c.py  h.py  header.py  jumptable.py  ld.py  linkerscript.py  mk.py  rs.py  rust.py  wasm.py
bento/runtimes/: __init__.py  abort_glue.py  armv7_mpu.py  armv7m_mpu.py  armv7m_sys.py  armv8m_mpu.py  armv8m_sys.py  awsm.py  jumptable.py  mpu_protect.py  noop.py  silverfish.py  system.py  wamr.py  wasm3.py  write_glue.py
examples/: Makefile  cp-plz.sh  data3.txt  decoder.c  decoder_rust.rs  decoder_rust_seek.rs  decoder_rust_stream.rs  decoder_seek.c  decoder_stream.c  decoder_unsafe.c
examples/1box/: Makefile  README.md  bb.c  bb.h  bb.ld  main.c  recipe.toml
examples/3box/: Makefile  README.md  bb.c  bb.h  bb.ld  main.c  recipe.toml
examples/bd/: bb.c  (+5 more)
examples/multilang/boxrust/: Cargo.toml  Makefile
examples/multilang/boxrust/bb/: Cargo.toml
examples/multilang/boxrust/bb/src/: bb.c  bb.ld  lib.rs
examples/multilang/boxrust/src/: main.rs
extra/: gdbserver-nrf52840.sh
src/: bits.rs  errors.rs  glz.rs  glzor.rs  hist.rs  leb128.rs  lib.rs  main.rs  rice.rs
targets/: config.toml
tests/: examples.rs  test_commands.py  test_examples.py
(+636 files in other folders)
