[package]
name = "glz"
version = "0.1.0"
authors = ["Christopher Haster <chaster@utexas.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.14.0"
structopt = "0.2"
indicatif = "0.12.0"
num-traits = "0.2"
num-derive = "0.3"
error-chain = "0.12.1"
