[package]
name = "glz"
version = "0.1.0"
authors = ["Christopher Haster <chaster@utexas.edu>"]
edition = "2018"

[dependencies]
# TODO version was yanked...
bitvec = {git="https://github.com/myrrlyn/bitvec", tag="v0.14.0"}
structopt = "0.2"
indicatif = "0.12.0"
num-traits = "0.2"
num-derive = "0.3"
error-chain = "0.12.1"
